--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: flex;
+  align-items: center;
+
+}
+.container{
+  width: 500px;
+  border: 1px red solid;
+  height: 1000px;
+  margin-top: 60px;
+  
+}
+.Seach-bar{
+  border: solid 1px black;
+  width: 100%;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(223, 223, 233);
+}
+
+button{
+  background-color: blue;
+  border-radius: 100%;
   color: white;
+  
+}
+input{
+  border-radius: 3px;
+
+}
+.image{
+  border: 1px solid black;
+  display: flex;
+  background-color: rgb(133, 133, 204);
+  
+}
+img{
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
+  border-radius: 100%;
+  
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
